frontend/test/should_fail/index_exec_loop_node_fromIndexMultipleFromTo_index2_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:int)
{
	for{n:Node in nodesFromIndexMultipleFromTo(fooi, j, j + 1, bari, 0, 42); true }
}